# sixmax

./: .gitignore  README.md  pyproject.toml
docs/: 01-engine.md  02-encoding.md  03-network.md  04-training.md  DESIGN.md
scripts/: setup_env.sh  submit_slurm.sh  train.py
src/sixmax/: __init__.py
src/sixmax/encoding/: __init__.py  action_encoder.py  batch_builder.py  card_embedding.py  state_encoder.py
src/sixmax/engine/: __init__.py  actions.py  evaluator.py  game.py  pot.py  state.py
src/sixmax/network/: __init__.py  backbone.py  heads.py  policy_value.py  utils.py
src/sixmax/training/: __init__.py  buffer.py  config.py  ppo.py  rollout.py  trainer.py  utils.py
tests/: __init__.py  test_encoding.py  test_engine.py  test_network.py  test_rules.py  test_training.py
